--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          path: '.'
+          fetch-depth: 0
           sparse-checkout: |
             auth
           sparse-checkout-cone-mode: false 
@@ -31,7 +31,12 @@ jobs:
         uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: 'fs'
-          scan-ref: '.'
+          scan-ref: 'auth'
           format: 'table'
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
+  
+      - name: GitLeaks Scan
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
