finalized CI till docker push

--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -55,7 +55,9 @@ jobs:
         with:
           image-ref: '${{ vars.DOCKERHUB_USERNAME }}/prod-${{ env.SERVICE_NAME }}:v${{ github.run_number }}'
           format: 'table'
-          severity: 'CRITICAL,HIGH'
+          severity: 'HIGH,CRITICAL'
+          ignore-unfixed: true
+          scanners: 'vuln,misconfig,secret'
           exit-code: '1'
 
       - name: Push to Docker Hub
