--- a/.github/workflows/order.yml
+++ b/.github/workflows/order.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   SERVICE_NAME: order
-  IMAGE_TAG: ${{ vars.DOCKERHUB_USERNAME }}/prod-order:${{ vars.API_GATEWAY_VERSION }}
+  IMAGE_TAG: ${{ vars.DOCKERHUB_USERNAME }}/prod-order:${{ vars.ORDER_VERSION }}
   VERSION: ${{ vars.ORDER_VERSION }}
 jobs:
   scan-and-build:
