--- a/.github/workflows/product.yml
+++ b/.github/workflows/product.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   SERVICE_NAME: product
-  IMAGE_TAG: ${{ vars.DOCKERHUB_USERNAME }}/prod-product:${{ vars.API_GATEWAY_VERSION }}
+  IMAGE_TAG: ${{ vars.DOCKERHUB_USERNAME }}/prod-product:${{ vars.PRODUCT_VERSION }}
   VERSION: ${{ vars.PRODUCT_VERSION }}
 jobs:
   scan-and-build:
