--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -87,4 +87,5 @@ jobs:
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
           git add ${{ env.SERVICE_NAME }}-values.yaml
-          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: update ${{ env.SERVICE_NAME }} to ${{ env.VERSION }}" && git push)
+          git commit -m "chore: update ${{ env.SERVICE_NAME }} to ${{ env.VERSION }}"
+          git push
