--- a/order/package.json
+++ b/order/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
-    "axios": "^1.6.7",
+    "axios": "1.13.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "knex": "^3.1.0",
